Expanded Cheat Menu:
Dialogs were resetting size on alt-tab from last update.

### Changed:
- Examine:
- > Added an Image Viewer to the Tools menu, from console you can use ImageView(image).

Lib:
- Mushed dialogs no longer spew stuff outside of their boxes.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001469,,
-302535920001470,,
+302535920001469,Image Viewer,
+302535920001470,"Open a dialog with a list of any images listed here (.dds,.tga,.png).",
 302535920001471,,
 302535920001472,,
 302535920001473,,
@@ -1326,7 +1326,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000629,UI Transparency,
 302535920000637,Video Memory,
 302535920000635,Terrain Detail,
-302535920000265,Pulsating Pins,
+302535920000265,Pulsating Pins Disable,
+302535920000335,When true pins will no longer do the pulsating motion (hover over to stop).,
 302535920000982,Custom,
 302535920000633,Lights Radius,
 302535920000641,Texture Compression,
@@ -1420,7 +1421,6 @@ And yes Medium is using a higher setting than High...",
 302535920001065,Menu Option,
 302535920001206,Change how many Sols between autosaving.,
 302535920000845,Render,
-302535920000335,Pins will no longer do the pulsating motion (hover over to stop).,
 302535920000623,Change Terrain Type,
 302535920000624,"Green or Icy mars? Coming right up!
 (don't forget a light model)",
