Expanded Cheat Menu:
English.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001469,Image Viewer,
-302535920001470,"Open a dialog with a list of any images listed here (.dds,.tga,.png).",
 302535920001471,,
 302535920001472,,
 302535920001473,,
@@ -36,6 +34,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001469,Image Viewer,
 302535920000971,Sites,
 302535920001446,Object Flags,
 302535920001447,Shows list of flags set for selected object.,
@@ -263,6 +262,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001470,"Open a dialog with a list of images from object (.dds, .tga, .png).",
 302535920001467,Append Dump,
 302535920001468,"Append text to same file, or create a new file each time.",
 302535920001442,EnumVars,
