Expanded Cheat Menu:
Version bump.

RC Garage v0.3:
Drone rovers unsiege once they leave the garage.
Selection is removed once rovers enter the garage.
Maybe fixed issue of buttons not showing up?

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/RC Garage/changes.txt
+++ b/Mods ChoGGi/RC Garage/changes.txt
@@ -1,3 +1,8 @@
+v0.3
+Drone rovers unsiege once they leave the garage.
+Selection is removed once rovers enter the garage.
+Maybed fixed issue of buttons not showing up?
+
 v0.2
 Support for rovers from Patriot Missile Defense System/Mission Sponsor - NASA.
 Added an Eject All button to main garage (just in case).
