--- a/Mods ChoGGi/Example New Res Icon/changes.txt
+++ b/Mods ChoGGi/Example New Res Icon/changes.txt
@@ -1,2 +1,6 @@
+v0.3
+Added selection panel paintbrush to switch between old and new.
+Cleaned up code a bit.
+
 v0.2
 Added fallback backlight so it isn't dark zoomed out (thanks LukeH).
