Expanded Cheat Menu:
### Changed:
- Examine:
- > Added Objects>BBox Toggle: Toggle showing object's bbox (changes depending on movement).
- > Renamed UI Click To Select to Examine (that's what it does after all).
- > UI Click To Examine no longer "freezes" UI so it should make selection easier.
- > Clicking a point in the main menu will examine it instead of trying to move the camera to it.
- > Changed what shows up for some of the userdata objects.

### Fixed:
- Report bug was sticking my msg in the screenshot (thanks SkiRich).

Lib:
- My Shift-Esc to close my dialogs action wasn't getting removed from terminal actions.

Construction: Show Dome Passage Line v0.9:
Parabola ftw.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001472,,
-302535920001473,,
 302535920001474,,
 302535920001475,,
 302535920001476,,
@@ -261,6 +259,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows any errors from loading mods in console log.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001472,BBox Toggle,
+302535920001473,Toggle showing object's bbox (changes depending on movement).,
 302535920001471,No images found.,
 302535920001470,"Open a dialog with a list of images from object (.dds, .tga, .png).",
 302535920001467,Append Dump,
@@ -293,9 +293,8 @@ Check the actual object/g_Classes.object for the correct value to use (Entity > 
 302535920001353,Thread info,
 302535920000016,Remove any green spheres/reset green coloured objects.,
 302535920000021,Mark object with green sphere and/or paint.,
-302535920001321,UI Click To Select,
-302535920001322,"Examine UI controls by clicking them.
-The screen will ""pause"" till you click something.",
+302535920001321,UI Click To Examine,
+302535920001322,Examine UI controls by clicking them.,
 302535920000970,UI Flash,
 302535920000972,Flash visibility of the UI object being examined.,
 302535920001057,Data,
