Expanded Cheat Menu/Lib:
### Changed:
- Added code highlight checkboxes to text editor/exec code.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001474,,
-302535920001475,,
 302535920001476,,
 302535920001477,,
 302535920001478,,
@@ -228,6 +226,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001305,Find Within,
 302535920001306,Enter text to find,
 302535920001304,Set how many levels within this table we check into (careful making it too large).,
+302535920001474,Code Highlight,
+302535920001475,Toggle lua code highlighting.,
 302535920001423,Close without doing anything.,
 302535920001301,Edit Text,
 302535920000721,Overwrite,
