Expanded Cheat Menu:
### Changed:
- Research Tech will now unlock mystery tech for different mysteries (cost will be the same as mystery instead of incrementing).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -695,7 +695,7 @@ Best hope you picked India as your Mars sponsor...",
 302535920000312,All Mysteries,
 302535920000313,All the mysteries,
 302535920000314,Researched,
-302535920000315,%s: Unleash your inner Black Monolith Mystery.,
+302535920000315,%s %s tech(s): Unleash your inner Black Monolith Mystery.,
 302535920000317,Select Unlock or Research then select the tech you want. Most mystery tech is locked to that mystery.,
 302535920000318,Unlock,
 302535920000319,Just unlocks in the research tree.,
