--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -123,7 +123,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000009,Missing Scenario Name,
 302535920000010,Missing Name,
 302535920000011,Missing Description,
-302535920001477,"%s, Mat: %, LOD: %s, State: %s",
+302535920001477,"%s, Mat: %s, LOD: %s, State: %s",
 302535920001297,Toggle Flight Grid,
 302535920001298,Shows a square grid with terrain/objects shape.,
 302535920001267,%s at position: %s was stopped.,
