Expanded Cheat Menu: Examining a string will add the '' around it like it does for strings in tables.
### Changed:
- Added the Mod Editor mode to Cheats>Mod Editor list.
- Moved Examine>Next to the go to text area, and renamed it to Search.

### Fixed:
- Monitor Threads, and some other funcs that used Examine autorefresh kind of broke (manually checking autofresh still worked).
- Examine>View Text will scroll to the proper line now (and highlight for a bonus).
- Typing a space in console was being ignored.

Centred HUD v0.1:
Centres HUD for ultrawide resolutions.

This adds a button to the HUD (bottom right), to test/save/clear a saved margin.
When you find one that works for your resolution then please send me your res width and margin, so I can add it to the mod.

Fix: Eternal Dust Storm v0.1:
There's no notification, but any newly placed buildings will complain about a dust storm.
https://forum.paradoxplaza.com/forum/index.php?threads/surviving-mars-eternal-dust-storm.1139596/

Stop Current Disasters v0.4:
Code cleanup.

Example Add More Numbers To Popups v0.1:
It's an example because my numbers are ugly, bug SkiRich to get photoshopping ;)

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001478,,
 302535920001479,,
 302535920001480,,
 302535920001481,,
@@ -556,6 +555,7 @@ Use with %s to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
+302535920001478,Open the Mod Editor and load the Mod map.,
 302535920001402,Add some party to your domes for 3 hours (10 domes max).,
 302535920001392,Clears story bit cooldowns... (got me).,
 302535920001393,StoryBits ClearCooldowns,
