Expanded Cheat Menu:
Examine will no longer log any errors when opening _G.
[mod] errors will be shown in console on load.

### Added:
- Console>Errors In Console: Shows [LUA ERROR] and stack in console log.

### Fixed:
- Examine:
- > View Text will scroll to the proper line now (and highlight for a bonus).
- > View Text/Dump Text will now show <text>.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001479,,
-302535920001480,,
+302535920001479,Errors In Console,
+302535920001480,Toggle showing log errors in the console.,
 302535920001481,,
 302535920001482,,
 302535920001483,,
