Expanded Cheat Menu: Console log position depends on console visibility.
### Added:
- Fixes>Toggles>Missing Mod Buildings: Removes any placed buildings that were from a mod.
- Game>Reload Map: Reloads map as new game.
- Help>ECM>Show Startup Ticks: Prints to console how many ticks it takes the map to load.

### Changed:
- Stuck Debug>DTM Slots in a dialog.
- Moved Hide Cheats Menu to ECM>Misc (so it and panel toggle are next to each other).
- Examine:
- > Moved Color Modifier from Object to Tools.
- > Object>Image Viewer now lists all textures/images used by object.

### Fixed:
- I borked Object Editor last update.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,14 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001479,Errors In Console,
-302535920001480,Toggle showing log errors in the console.,
-302535920001481,,
-302535920001482,,
-302535920001483,,
-302535920001484,,
-302535920001485,,
-302535920001486,,
-302535920001487,,
-302535920001488,,
 302535920001489,,
 302535920001490,,
 302535920001491,,
@@ -26,6 +16,9 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001486,DTM Slots,
+302535920000483,Write Console Log,
+302535920000484,Write console log to %slogs/ConsoleLog.log (updated every 5 seconds).,
 302535920001469,Image Viewer,
 302535920000971,Sites,
 302535920001476,Flags,
@@ -240,6 +233,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001479,Errors In Console,
+302535920001480,Toggle showing log errors in the console.,
 302535920000853,Monitor,
 302535920001376,Auto Update List,
 302535920001377,Update this list when ECM updates it.,
@@ -943,7 +938,7 @@ Not permanent.",
 302535920001328,Show Grid Disable,
 302535920001329,Hide the white ground grids.,
 302535920001310,DTM Slots Display,
-302535920001311,Toggle DTM slots display,
+302535920001311,Show DTM slots display,
 302535920001312,FPS Counter Location,
 302535920001313,One of the four corners of your screen.,
 302535920001314,Toggle Render,
@@ -1007,7 +1002,7 @@ Use Shift + Arrow keys to change the height/radius.",
 302535920000462,Maps paths in real time,
 302535920000468,"Shows the selected unit path or show a list to add/remove paths for rovers, drones, colonists, or shuttles.",
 302535920000469,Close Dialogs,
-302535920000470,"Close any dialogs opened by ECM (Examine, ObjectManipulator, Change Colours, etc...).",
+302535920000470,"Close any dialogs opened by ECM (Examine, Object Editor, Change Colours, etc...).",
 302535920000472,Manipulate objects (selected or under mouse cursor),
 302535920000475,Entity Spawner,
 302535920000476,"Shows list of objects, and spawns at mouse cursor.",
@@ -1019,8 +1014,6 @@ click+drag for multiple selection.
 It's not as if domes need to be where you placed them (people will just ignore if you move the domes all to one place for that airy mars look).",
 302535920000481,Open In Ged Object Editor,
 302535920000482,"Shows some info about the object, and so on. Some buttons may make camera wonky (use Game>Camera>Reset).",
-302535920000483,Write Console Log,
-302535920000484,Write console log to %slogs/ConsoleLog.log (writes immediately).,
 302535920000487,Delete All Of Selected Object,
 302535920000488,Will ask for confirmation beforehand (will not delete domes).,
 302535920000489,Delete Object(s),
@@ -1031,9 +1024,7 @@ Use Editor Mode and mouse drag to select multiple objects for deletion.",
 302535920000493,Change Map,
 302535920000494,"Change map (options to pick commander, sponsor, etc...
 
-Attention: If you get yellow ground areas; just load it again.
-
-The map disaster settings don't do jack (use ECM>Mission>Disasters).",
+Attention: If you get yellow ground areas; just load it again or try %s.",
 302535920000495,Particles Reload,
 302535920000496,"Reloads particles from ""Data/Particles""...",
 302535920000497,Toggle Terrain Deposit Grid,
@@ -1221,6 +1212,9 @@ Mechanized: 1,000,000",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
+302535920001483,Missing Mod Buildings,
+302535920001484,"Removes any placed buildings that were from a mod.
+This may break the save in other ways, best to just use it for testing.",
 302535920001351,Rocket Crashes Game On Landing,
 302535920001352,When you select a landing site; your game will crash to desktop.,
 302535920001299,Toggle Working On All Buildings,
@@ -1304,6 +1298,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001487,Reload Map,
+302535920001488,Reloads map as new game.,
 302535920001454,Stockpiled,
 302535920001455,Produced,
 302535920001456,Consumed,
@@ -1460,11 +1456,14 @@ Not noticeable unless using higher zoom.",
 302535920000654,Select (or mouse over) an object to follow.,
 302535920000655,Toggle Cursor,
 302535920000656,Toggle between moving camera and selecting objects.,
+302535920001485,Does everything other than uploading mod to workshop (see AppData/ModUpload).,
+302535920001481,Show Startup Ticks,
+302535920001482,Prints to console how many ticks it takes the map to load.,
 302535920000039,"Spam in the console log doesn't necessarily mean a problem with SM (it could just a warning).
 This report will go to the %s developers not me.",
 302535920001463,Bug Report,
 302535920001464,Yes, I know what I'm doing. This is a bug.,
-302535920001427,Pack Mod,
+302535920001427,Pack,
 302535920001428,Uploads as a packed mod (default for mod editor upload).,
 302535920001412,GUI Dock Side,
 302535920001413,Change which side (most) GUI menus are on.,
@@ -1477,7 +1476,7 @@ This report will go to the %s developers not me.",
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
-302535920001363,"Shows list of Steam downloaded mod hpk files, so you can extract them.",
+302535920001363,Shows list of Steam downloaded mod hpk files for extraction (or use hpk.exe).,
 302535920000504,List All Menu Items,
 302535920001323,Show all the cheat menu items in a list dialog.,
 302535920001285,Opens in webbrowser.,
@@ -1492,7 +1491,7 @@ This report will go to the %s developers not me.",
 302535920001258,Copy Files,
 302535920000051,Mod will not be packed in an hpk archive.,
 302535920001259,"Copies all mod files to %sModUpload, uncheck to copy files manually.",
-302535920001260,Blank Mod,
+302535920001260,Blank,
 302535920001261,"Uploads a blank private mod to Steam Workshop, and prints Workshop id in log.",
 302535920001262,%sModUpload folder is empty and waiting for files.,
 302535920001263,"%s is different from your name, do you have permission to upload it?",
@@ -1518,7 +1517,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920000465,"Disables menu, cheat panel, and hotkeys, but leaves settings intact. You'll need to manually re-enable in settings file, or check key bindings for Disable ECM.",
 302535920001025,Help! I'm with stupid!,
 302535920001014,Hide Cheats Menu,
-302535920001019,This will hide the Cheats menu; Use F2 to see it again (Ctrl-F2 to toggle the Cheats selection panel).,
+302535920001019,This will hide the Cheats menu; Use F2 to see it again.,
 302535920001020,Read me,
 302535920001023,This WILL take awhile if you open it in View Text.,
 302535920001029,Changelog,
