Expanded Cheat Menu:
### Added:
- Game>Camera>Toggle Map Edge Limit: Removes pushback limit at the edge of the map.
- Debug>View All Entities: Loads a blank map and places all entities in it.

### Changed:
- RC Transport Storage Capacity renamed to RC Storage Capacity (RC Constructors).

### Removed:
- RC Rover Drone Recharge Free: They don't use batteries anymore...

Remove Unwanted Colonists v0.2:
The pod blinked out of existence instead of flying away.
The rocket fx wasn't turned on.
Widened the radius it'll use to hover around waiting.
Fixed issue if pod arrived and victim was in a building.

RC Constructor Routes v0.1:
For some reason it intentionally isn't supposed to be able to create routes...

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,9 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001489,,
-302535920001490,,
-302535920001491,,
-302535920001492,,
-302535920001493,,
+302535920000547,,
+302535920000548,,
 302535920001494,,
 302535920001495,,
 302535920001496,,
@@ -917,6 +914,9 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001491,View All Entities,
+302535920001492,Loads a blank map and places all entities in it.,
+302535920001493,"This will change to a new map, anything unsaved will be lost!",
 302535920001458,Material Properties,
 302535920001459,Shows list of material settings/.dds files for use with .mtl files.,
 302535920001421,Shows a list of particles you can use on the selected obj.,
@@ -1120,17 +1120,15 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000538,Change capacity of shuttles.,
 302535920000539,Set Speed,
 302535920000540,Change speed of shuttles.,
-302535920000541,Set Charging Distance,
+302535920000541,RC Set Charging Distance,
 302535920000542,Distance from power lines that rovers can charge.,
 302535920000544,How fast RCs will move.,
 302535920000545,RC Gravity,
 302535920000546,Change gravity of RCs.,
-302535920000547,RC Rover Drone Recharge Free,
-302535920000548,No more draining Rover Battery when recharging drones.,
-302535920000549,RC Transport Instant Transfer,
-302535920000550,RC Rover quick Transfer/Gather resources.,
-302535920000551,RC Transport Storage Capacity,
-302535920000552,Change amount of resources RC Transports can carry.,
+302535920000549,RC Instant Resource Transfer,
+302535920000550,Make it instantly gather/transfer resources.,
+302535920000551,RC Storage Capacity,
+302535920000552,Change amount of resources RC Transports/Constructors can carry.,
 302535920000081,Workers,
 302535920000333,Building Info,
 302535920000345,Shows info about building in text above it.,
@@ -1298,6 +1296,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001489,Toggle Map Edge Limit,
+302535920001490,Removes pushback limit at the edge of the map.,
 302535920001487,Reload Map,
 302535920001488,Reloads map as new game.,
 302535920001454,Stockpiled,
@@ -1619,7 +1619,7 @@ Not permanent for colonists after they exit buildings (for now).",
 302535920000688,Clean All Objects,
 302535920000689,Removes all dust from all objects.,
 302535920000690,Fix All Objects,
-302535920000691,Fixes all broken objects.,
+302535920000691,Fixes all malfunctioned objects.,
 302535920000693,"Select/mouse over an object to change the colours
 Use Shift- or Ctrl- for random colours/reset colours.",
 302535920000695,Change the opacity of objects.,
