Expanded Cheat Menu:
### Changed:
- Unlock all buildings is now Toggle Unlock All Buildings.

All Sponsors v0.1:
If you have three sponsors; this will add all the other sponsors.

Show Saved Colonies v0.9:
Made it wait till PlanetRotationObj is created.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920000547,,
+302535920000547,Lock,
 302535920000548,,
 302535920001494,,
 302535920001495,,
@@ -13,6 +13,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000318,Unlock,
 302535920001486,DTM Slots,
 302535920000483,Write Console Log,
 302535920000484,Write console log to %slogs/ConsoleLog.log (updated every 5 seconds).,
@@ -495,7 +496,8 @@ Will be overridden by %s.",
 302535920000178,Protection Radius,
 302535920000179,Change threat protection coverage distance.,
 302535920000180,Unlock Locked Buildings,
-302535920000181,"Gives you a list of buildings you can unlock in the build menu (doesn't apply to sponsor limited ones, see Toggles\%s).",
+302535920000181,"Shows a list of buildings you can unlock.
+This doesn't apply to sponsor limited ones; see Toggles>%s.",
 302535920000182,Pipes Pillars Spacing,
 302535920000183,Only place Pillars at start and end.,
 302535920000184,Unlimited Connection Length,
@@ -578,11 +580,14 @@ See also %s.",
 302535920000328,"Scanning, deep scanning, core mines, and alien imprints.",
 302535920000330,"Advance to next part, show what part you're on, or remove mysteries.",
 302535920000331,Start Mystery,
-302535920000332,Pick and start a mystery (with instant start option).,
+302535920000332,"Pick and start a mystery (with instant start option).
+Certain mysteries need certain objects which get placed when the map is generated on a new game (the green rocks one for instance).",
 302535920000334,Show the disasters list and optionally start one.,
-302535920000336,Spawn certain amount of colonists.,
-302535920000337,Unlock all buildings,
-302535920000338,Unlock all buildings for construction.,
+302535920000336,Spawn X amount of colonists.,
+302535920000337,Toggle Unlock All Buildings,
+302535920000338,"Unlocks all buildings for construction.
+This doesn't apply to sponsor limited ones; see ECM>Buildings>Toggles>%s.
+To unlock a single building: See ECM>Buildings>%s.",
 302535920000339,Toggle All Shifts,
 302535920000340,Toggle all workshifts on or off (farms only get one on).,
 302535920000341,Update All Workplaces,
@@ -668,7 +673,7 @@ Wait for a Sol or two for it to update (should give a popup msg).",
 302535920000291,"Waiting for %s to finish.
 
 Skip it?",
-302535920000293,Unlocked all buildings for construction.,
+302535920000293,%s: all buildings for construction.,
 302535920000294,Added,
 302535920000296,If you need a little boost (or a lotta boost) in research.,
 302535920000297,"%s:
@@ -690,7 +695,6 @@ Best hope you picked India as your Mars sponsor...",
 302535920000314,Researched,
 302535920000315,%s %s tech(s): Unleash your inner Black Monolith Mystery.,
 302535920000317,Select Unlock or Research then select the tech you want. Most mystery tech is locked to that mystery.,
-302535920000318,Unlock,
 302535920000319,Just unlocks in the research tree.,
 302535920000320,Unlocks and researchs.,
 302535920000375,The Soylent Option,
