Expanded Cheat Menu: Version bump.
Dome Birth Progress v0.1:
Add a percent build up to when children are spawned.
Once it hits a hundred, it'll slowly tick down afterwards to around zero (then back up again).

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Show Saved Colonies/changes.txt
+++ b/Mods ChoGGi/Show Saved Colonies/changes.txt
@@ -2,7 +2,7 @@ v0.9
 Made it wait till PlanetRotationObj is created.
 
 v0.8
-Gagarin HF2.
+Gagarin HF2 (failed attempt to fix issue fixed in 0.9).
 
 v0.7
 Gagarin.
