Expanded Cheat Menu:
### Changed:
- Examine:
- > Auto-refresh delay isn't stored as a global setting anymore.
- > Hyperlinks sometimes barfed on weird text, it now checks if there's an actual link.

Lib:
- List dialog was sometimes showing the value instead of the text for the list.

Fix: Buildings Broken Down And No Repair v0.1:
The Long Winter event seems to be responsible.
If you have broken down buildings the drones won't repair.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -281,7 +281,7 @@ Check the actual object/g_Classes.object for the correct value to use (Entity > 
 302535920001396,point,
 302535920001389,All Properties,
 302535920001390,Get all properties.,
-302535920001391,Show all values (metatable).,
+302535920001391,Show all values: getmetatable(obj).,
 302535920001384,Get properties different from base/parent object?,
 302535920000067,Ged Inspect,
 302535920001075,Open this object in the Ged inspector.,
