Expanded Cheat Menu:
### Added:
- Cheats>Research>Research Remove: Stop a tech from being researched.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001494,,
-302535920001495,,
+302535920001494,Stop a tech from being researched.,
+302535920001495,This tries to reverse the changes made when the tech is researched (emphasis on tries).,
 302535920001496,,
 302535920001497,,
 302535920001498,,
