Expanded Cheat Menu:
### Added:
- Debug>Examine Persist Errors: Shows an examine dialog with any persist errors when saving (needs HelperMod).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001498,,
-302535920001499,,
 302535920001500,,
 302535920001501,,
 302535920001400,ChoGGi,
@@ -918,6 +916,8 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001498,Examine Persist Errors,
+302535920001499,Shows an examine dialog with any persist errors when saving (needs ECM HelperMod).,
 302535920001491,View All Entities,
 302535920001492,Loads a blank map and places all entities in it.,
 302535920001493,"This will change to a new map, anything unsaved will be lost!",
